Delete unnecessary home.html file and add index.html with links to deadpool and wolverine pages

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+<a href="../HTML/deadpool.html">deadpool</a>
+<a href="../HTML/wolverine.html">wolverine</a>
 </body>
 </html>
